WexGit/Wex_DX/force-app/main/default/objects/forseva1__EquifaxInternationalCommercialReport__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Country</label>
    <length>18</length>
    <type>Text</type>
</CustomField>