WexGit/Wex_DX/force-app/main/default/objects/forseva1__EquifaxInternationalCommercialReport__c/fields/Payment_History_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_History_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment History Status</label>
    <length>18</length>
    <type>Text</type>
</CustomField>