WexGit/Wex_DX/force-app/main/default/objects/forseva1__EquifaxInternationalCommercialReport__c/fields/Risk_Grade__c.field-meta.xml
<CustomField>
    <fullName>Risk_Grade__c</fullName>
    <label>Risk Grade</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Very Low</fullName>
            </value>
            <value>
                <fullName>2 - Low</fullName>
            </value>
            <value>
                <fullName>3 - Medium</fullName>
            </value>
            <value>
                <fullName>4 - High</fullName>
            </value>
            <value>
                <fullName>5 - Very High</fullName>
            </value>
            <value>
                <fullName>0 - No hit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>