WexGit/Wex_DX/force-app/main/default/objects/forseva1__EquifaxInternationalCommercialReport__c/fields/Risk_Grade_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Risk_Grade_Criteria__c</fullName>
    <label>Risk Grade Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PASS</fullName>
            </value>
            <value>
                <fullName>FAIL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>